# craftbot_homework

./: CMakeLists.txt
include/: HyperSphere.h  IntersectionDescriptor.h  RelationDescriptor.h
src/: main.cpp
